--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>Homework1</module>
         <module>Homework2</module>
+        <module>Homework3</module>
     </modules>
 
     <properties>
