--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>Homework2</module>
         <module>Homework3</module>
         <module>Homework4</module>
+        <module>Homework5</module>
     </modules>
 
     <properties>
