--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>Homework3</module>
         <module>Homework4</module>
         <module>Homework5</module>
+        <module>Homework6</module>
     </modules>
 
     <properties>
