--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>Homework4</module>
         <module>Homework5</module>
         <module>Homework6</module>
+        <module>Homework7</module>
     </modules>
 
     <properties>
