--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>Homework5</module>
         <module>Homework6</module>
         <module>Homework7</module>
+        <module>Homework8</module>
     </modules>
 
     <properties>
